# samplenator-cli

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: pylint.yml  pytest.yml
samplenator_cli/: __init__.py  cli.py  config.py  ingest.py
test_data/: bjorn.yaml  cdm.yaml  clarity.yaml  demux.yaml  frontend.yaml  full_journey.yaml  pipeline.yaml
tests/: test_ingest.py
tests/fixtures/system/: bjorn.csv  cdm.csv  clarity.csv  demux.csv  frontend.csv  pipeline.csv
